Bug #162507.  Default icon should not be set for embedding applications.  Not part of the default build.